# conditions

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  rustfmt.toml
.github/workflows/: cd.yml  ci.yml  coverage.yml  dependabot-auto-merge.yml  release-please.yml  release-plz.yml
cli/: CHANGELOG.md  Cargo.toml
cli/src/: args.rs  main.rs
lib/: CHANGELOG.md  Cargo.toml
lib/src/: api.rs  cache.rs  conditions.rs  config.rs  icons.rs  lib.rs
lib/src/location/: from_ip.rs  mod.rs
lib/src/weather/: mod.rs  open_meteo.rs
src/: api.rs  args.rs  cache.rs  conditions.rs  config.rs  icons.rs  lib.rs  location.rs  main.rs  unit.rs  weather.rs
src/location/: from_ip.rs  from_postal_code.rs  mod.rs
src/weather/: mod.rs  open_meteo.rs  weather_api.rs
