[package]
name = "conditions"
version = "0.2.0"
edition = "2021"
authors = ["John Allen <johnallen3d@threedogconsulting.com>"]
repository = "https://github.com/johnallen3d/conditions"
description = "Fetch basic weather conditions for current or specified location"
keywords = ["weather"]
categories = ["command-line-utilities"]
readme = "README.md"

license = "MIT"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
confy = "0.5.1"
env_logger = "0.10.0"
eyre = "0.6.8"
lazy_static = "1.4.0"
log = "0.4.20"
rustls = "0.21.7"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.49"
ureq = { version = "2.8.0", features = ["json"] }
sqlx = { version = "0.7", features = ["macros", "runtime-tokio", "sqlite"] }
tokio = { version = "1.33", features = ["macros"] }

[dev-dependencies]
tempfile = "3.8.0"
