[workspace]
resolver = "2"

members = ["cli", "lib"]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["John Allen <john@threedogconsulting.com"]
homepage = "https://github.com/johnallen3d/conditions"
repository = "https://github.com/johnallen3d/mp-cli.git"
description = "Fetch basic weather conditions for current or specified location"
keywords = ["weather"]
readme = "README.md"
license = "MIT"

[workspace.dependencies]
eyre = "0.6.8"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.50"
tokio = { version = "1.33", features = ["macros"] }
